--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ ul {
 /* buttons */
 .button {
   padding: 10px 32px;
-  min-width: 216px;
+  min-width: 200px;
   border-width: 0;
   border-radius: 4px;
   cursor: pointer;
@@ -238,8 +238,6 @@ ul {
   text-align: center;
   color: var(--primary-white-color);
 }
-
-/* <button type="button" class="button primary">Замовити послугу</button> */
 
 /* sections */
 .section {
@@ -535,10 +533,12 @@ ul {
 
 /* follow list */
 .follow-container {
-  margin-top: 12px;
+  /* margin-top: 12px; */
+  margin-right: 93px;
 }
 
-.follow-title {
+.follow-title,
+.subscribe-title {
   margin-bottom: 20px;
 
   font-weight: 700;
@@ -581,84 +581,51 @@ ul {
   background-color: var(--accent-color);
 }
 
-/* modal styles */
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-  opacity: 1;
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-hidden {
-  visibility: none;
-  opacity: 0;
-  pointer-events: none;
-}
-
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(1.1);
-}
-
-.modal {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  padding: 8px;
-
-  width: 528px;
-  height: 581px;
-
-  border-radius: 4px;
-  background: var(--primary-white-color);
-  box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
-    0 1px 3px 0 rgba(0, 0, 0, 0.12);
-
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn-close {
-  margin-left: auto;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
+.subscribe-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+}
+
+.subscribe-label {
+  display: block;
+}
+
+.subscribe-input {
+  padding: 15px 16px;
+  width: 358px;
+  height: 50px;
+
+  color: var(--primary-white-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: rgba(33, 150, 243, 0);
+}
+
+.subscribe-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-input-container {
+  display: flex;
   align-items: center;
-
-  border-radius: 50%;
-  stroke-width: 10px;
-  background-color: var(--primary-white-color);
-  border-color: rgba(0, 0, 0, 0.1);
+  gap: 12px;
 }
 
-.modal-close-icon {
-  fill: var(--primary-black-color);
+.subscribe-icon {
+  fill: var(--primary-white-color);
 }
 
-/* .btn-close {
-  position: absolute;
-  right: 8px;
-  top: 8px;
-
-  width: 30px;
-  height: 30px;
-
-  cursor: pointer;
-  border-radius: 50%;
-  stroke-width: 10px;
-  border-color: rgba(0, 0, 0, 0.1);
-  background-color: var(--primary-white-color);
-  background-image: url(../images/close-black.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-} */
+.btn-subscribe {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding-left: 28px;
+  padding-right: 28px;
+}
 
 /* portfolio page styles */
 
@@ -784,4 +751,232 @@ ul {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
+}
+
+/* modal styles */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  visibility: none;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.1);
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  padding: 40px;
+
+  width: 528px;
+  height: 581px;
+
+  border-radius: 4px;
+  background: var(--primary-white-color);
+  box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12);
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-close {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 50%;
+  stroke-width: 10px;
+  background-color: var(--primary-white-color);
+  border-color: rgba(0, 0, 0, 0.1);
+  color: var(--primary-black-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* 
+  border-color: rgba(0, 0, 0, 0.1);
+  background-color: var(--primary-white-color);
+  background-image: url(../images/close-black.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+} */
+
+.btn-close:hover {
+  color: var(--accent-color);
+}
+
+.modal-close-icon {
+  fill: currentColor;
+}
+
+.modal-title {
+  margin-bottom: 12px;
+
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--secondary-text-color);
+}
+
+.modal-form {
+  width: 100%;
+}
+
+.modal-field {
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.input-label {
+  display: block;
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  letter-spacing: 0.01em;
+}
+
+.input-wrap {
+  position: relative;
+}
+
+.input {
+  padding-left: 42px;
+  width: 100%;
+  height: 40px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  outline: transparent;
+}
+
+.input:focus,
+.input-comment:focus {
+  border-color: var(--accent-color);
+}
+
+.input:focus + .input-icon {
+  fill: var(--accent-color);
+}
+
+.input-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  fill: var(--secondary-text-color);
+}
+
+.textarea-field {
+  margin-bottom: 20px;
+}
+
+.input-comment {
+  display: block;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  resize: none;
+
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  outline: transparent;
+}
+
+.input-comment::placeholder {
+  font-size: 12px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.checkbox-field {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+  padding-left: 12px;
+}
+
+.hidden {
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--secondary-text-color);
+  fill: transparent;
+}
+
+.checkbox-icon {
+  width: 11px;
+  height: 8px;
+}
+
+.modal-check:checked + .checkbox-label > .checkbox {
+  background-color: var(--accent-color);
+  border: none;
+  fill: var(--primary-white-color);
+}
+
+.modal-check:focus + .checkbox-label > .checkbox {
+  border-color: var(--accent-color);
+  fill: var(--primary-white-color);
+}
+
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.agreement-link {
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--accent-color);
+}
+
+.btn-submit {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
